2002-03-26  Phil Edwards  <pme@gcc.gnu.org>
	* gcc.dg/cpp/endif-pedantic1.c,
	gcc.dg/cpp/endif-pedantic2.c:  New tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51410 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-26  Phil Edwards  <pme@gcc.gnu.org>
+
+	* gcc.dg/cpp/endif-pedantic1.c,
+	gcc.dg/cpp/endif-pedantic2.c:  New tests.
+
 2002-03-26  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/init/new1.C: New test.
