--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* expr.h (ADD_PARM_SIZE): One more convert for INC.
+
 2002-03-26  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/aix51.h (WCHAR_TYPE): Define.
