* include/dwarf2-signal.h: Temporarily back out last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51413 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-25  Hans Boehm <Hans_Boehm@hp.com>
+
+	* include/dwarf2-signal.h: Temporarily back out last change.
+
 2002-03-25  Andrew Haley <aph@cambridge.redhat.com>, Hans Boehm <Hans_Boehm@hp.com>
 
 	* configure.in, configure: enable dwarf2-exception-style
