--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
+	* toplev.c (rest_of_compilation): Delay emit_initial_value_sets
+	until after eh landing pad generation.
+	* config/alpha/alpha.c (alpha_gp_save_rtx): Use gen_mem_addressof.
+	* config/alpha/alpha.md (exception_receiver_2): Only accept MEMs.
+
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
 	* expr.h (ADD_PARM_SIZE): One more convert for INC.
 
 2002-03-26  David Edelsohn  <edelsohn@gnu.org>
