--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-26  Hans Boehm <Hans_Boehm@hp.com>
+
+	* include/dwarf2-signal.h: Temporarily back out last change.
+
 2002-03-26  Loren J. Rittle  <ljrittle@acm.org>
 
 	* include/posix-threads.h: Support <.../pal.h> on FreeBSD/alpha.
