* gcc.dg/20001101-1.c: Add -mcpu=ultrasparc.  Only run on         sparcv9 systems.         * gcc.dg/20001102-1.c: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51419 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/20001101-1.c: Add -mcpu=ultrasparc.  Only run on
+	sparcv9 systems.
+	* gcc.dg/20001102-1.c: Likewise.
+
 2002-03-26  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/abi/vbase9.C: New test.
