--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/20001101-1.c: Add -mcpu=ultrasparc.  Only run on
+	sparcv9 systems.
+	* gcc.dg/20001102-1.c: Likewise.
+
 2002-03-26  Phil Edwards  <pme@gcc.gnu.org>
 
 	* gcc.dg/cpp/endif-pedantic1.c,
