--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
+	* gcc.dg/20020312-2.c: Don't test epilogue vs global register
+	on sparc.
+
 	* gcc.dg/20001101-1.c: Add -mcpu=ultrasparc.  Only run on
 	sparcv9 systems.
 	* gcc.dg/20001102-1.c: Likewise.
