--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
+	* config.gcc (sparc*-solaris): Use float_format=sparc.
+
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
 	* config/sparc/sparc.h (MAX_WCHAR_TYPE_SIZE): Don't define.
 	* config/sparc/linux-aout.h (MAX_WCHAR_TYPE_SIZE): Don't undef.
 	* config/sparc/linux.h, config/sparc/linux64.h: Likewise.
