* gcc.dg/pragma-re-2.c: Avoid empty source file warning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51425 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
+	* gcc.dg/pragma-re-2.c: Avoid empty source file warning.
+
 	* gcc.dg/20020312-2.c: Don't test epilogue vs global register
 	on sparc.
 
