--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.c (alpha_emit_set_const): Add a REG_EQUAL note
+	if a non-trivial load was emitted.
+	(alpha_emit_set_const_1): Remove obsolete extension.  Fix thinko
+	in high+extra+low case.
+
+2002-03-26  Richard Henderson  <rth@redhat.com>
+
 	* config.gcc (sparc*-solaris): Use float_format=sparc.
 
 2002-03-26  Richard Henderson  <rth@redhat.com>
