--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-26  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* pa/pa-pro-end.h (CPP_PREDEFINES): Add -D__pro__.
+
+	* pa/lib2funcs.asm: Don't use .SPACE and .SUBSPACE if __pro__
+	or __rtems_ is defined.
+
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (alpha_emit_set_const): Add a REG_EQUAL note
