--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* misc.c (ggc_p): Remove.
+
 2002-03-27  Geert Bosch  <bosch@gnat.com>
 
 	* prj-makr.ads, prj-makr.adb : New files.
