PR target/6054         * config/ia64/ia64.c (ia64_expand_call): Use pic patterns for         TARGET_CONST_GP.  Simplify conditions.
	* gcc.dg/20020326-1.c: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51441 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-27  Richard Henderson  <rth@redhat.com>
+
+	PR target/6054
+	* config/ia64/ia64.c (ia64_expand_call): Use pic patterns for
+	TARGET_CONST_GP.  Simplify conditions.
+
 2002-03-26  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* pa/pa-pro-end.h (CPP_PREDEFINES): Add -D__pro__.
