--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-03-27  Richard Henderson  <rth@redhat.com>
 
+	PR target/6054
+	* config/ia64/ia64.c (ia64_expand_call): Use pic patterns for
+	TARGET_CONST_GP.  Simplify conditions.
+
+2002-03-27  Richard Henderson  <rth@redhat.com>
+
 	* config/sparc/freebsd.h, config/sparc/linux.h, config/sparc/linux64.h,
 	config/sparc/netbsd-elf.h, config/sparc/pbd.h, config/sparc/sol2.h,
 	config/sparc/vxsim.h (LOCAL_LABEL_PREFIX): Define.
