2002-03-27  Anthony Green  <green@redhat.com>
	* lib/libjava.exp: Add the wrapper link options only when we're
	linking.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51450 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/testsuite/ChangeLog
+++ b/gcc-3_1-branch/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-27  Anthony Green  <green@redhat.com>
+
+	* lib/libjava.exp: Add the wrapper link options only when we're
+	linking.
+
 2002-03-26  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.mauve/mauve.exp (test_mauve): Use correct stderr
