2002-03-27  Anthony Green  <green@redhat.com>
	* libjava.jni/jni.exp (gcj_jni_run): Fix cross build test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51452 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/testsuite/ChangeLog
+++ b/gcc-3_1-branch/libjava/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-27  Anthony Green  <green@redhat.com>
 
+	* libjava.jni/jni.exp (gcj_jni_run): Fix cross build test.
+
+2002-03-27  Anthony Green  <green@redhat.com>
+
 	* lib/libjava.exp: Add the wrapper link options only when we're
 	linking.
 
