--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-27  Anthony Green  <green@redhat.com>
 
+	* libjava.jni/jni.exp (gcj_jni_run): Fix cross build test.
+
+2002-03-27  Anthony Green  <green@redhat.com>
+
 	* lib/libjava.exp: Add the wrapper link options only when we're
 	linking.
 
