--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,29 @@
+2002-03-24  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/TextComponent.java (TextComponent): Editable by
+	default.
+
+	* java/awt/MenuItem.java (eventMask): No longer private.
+	* java/awt/Button.java (dispatchEventImpl): Only dispatch to
+	superclass if we didn't handle event.
+	* java/awt/Checkbox.java (dispatchEventImpl): New method.
+	* java/awt/CheckboxMenuItem.java (dispatchEventImpl): New method.
+	* java/awt/Choice.java (dispatchEventImpl): New method.
+	* java/awt/List.java (dispatchEventImpl): New method.
+	* java/awt/Scrollbar.java (dispatchEventImpl): New method.
+	* java/awt/TextComponent.java (dispatchEventImpl): New method.
+	* java/awt/TextField.java (dispatchEventImpl): New method.
+
+	* java/awt/Component.java (processEvent): Check ComponentEvent
+	after KeyEvent.
+
+2002-03-27  Anthony Green  <green@redhat.com>
+
+	* libgcj.spec.in: Add CHECKREFSPEC.
+	* configure.in: Ditto.
+	* configure.host: Ditto.  Check references for xscale-elf.
+	* configure: Rebuilt.
+
 2002-03-25  Hans Boehm <Hans_Boehm@hp.com>
 
 	* include/dwarf2-signal.h: Temporarily back out last change.
