--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-27  Anthony Green  <green@redhat.com>
+
+	* libgcj.spec.in: Add CHECKREFSPEC.
+	* configure.in: Ditto.
+	* configure.host: Ditto.  Check references for xscale-elf.
+	* configure: Rebuilt.
+
 2002-03-26  Hans Boehm <Hans_Boehm@hp.com>
 
 	* include/dwarf2-signal.h: Temporarily back out last change.
