--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Richard Henderson  <rth@redhat.com>
+
+	* g++.dg/init/new1.C: Fix size_t.
+
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/pragma-re-2.c: Avoid empty source file warning.
