--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-27  Richard Henderson  <rth@redhat.com>
 
+	* toplev.c (rest_of_compilation): Don't compile if we've had errors.
+
+2002-03-27  Richard Henderson  <rth@redhat.com>
+
 	* config/sparc/freebsd.h, config/sparc/linux.h, config/sparc/linux64.h,
 	config/sparc/netbsd-elf.h, config/sparc/pbd.h, config/sparc/sol2.h,
 	config/sparc/vxsim.h (LOCAL_LABEL_PREFIX): Define.
