--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-27  Richard Henderson  <rth@redhat.com>
 
+	* g++.old-deja/g++.brendan/crash52.C: Remove return warning marker.
+	* g++.old-deja/g++.jason/report.C: Likewise.
+
+2002-03-27  Richard Henderson  <rth@redhat.com>
+
 	* g++.dg/init/new1.C: Fix size_t.
 
 2002-03-26  Richard Henderson  <rth@redhat.com>
