--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/init/new2.C: New test.
+	
 2002-03-26  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/pragma-re-2.c: Avoid empty source file warning.
