--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-27  Matthew Gingell <gingell@gnat.com>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
 2002-03-24  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	Fix for: PR bootstrap/3591, target/5676
