--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 27 22:46:04 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (ix86_output_addr_diff_elt): Remove binutils bug workaround.
+
 2002-03-27  Richard Henderson  <rth@redhat.com>
 
 	* toplev.c (rest_of_compilation): Don't compile if we've had errors.
