* optabs.c (emit_no_conflict_block, emit_libcall_block): Avoid nesting 	of libcall regions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51477 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 27 23:11:35 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* optabs.c (emit_no_conflict_block, emit_libcall_block): Avoid nesting
+	of libcall regions.
+
 Wed Mar 27 22:54:14 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* cfgrtl.c (merge_blocks_nomove): Use set_block_for_insn instead of
