* configure.in (alpha*-dec-osf*): Enable libgcj.
	gcc:
	* doc/install.texi (alpha*-dec-osf*): Don't need --enable-libgcj
	any more.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51482 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/ChangeLog
+++ b/gcc-3_1-branch/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* configure.in (alpha*-dec-osf*): Enable libgcj.
+
 2002-03-24  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	Fix for: PR bootstrap/3591, target/5676
