--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* doc/install.texi (alpha*-dec-osf*): Don't need --enable-libgcj
+	any more.
+
 Wed Mar 27 22:52:02 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* cfgrtl.c (merge_blocks_nomove): Use set_block_for_insn instead of
