--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* configure.in (alpha*-dec-osf*): Enable libgcj.
+
 2003-03-27  Matthew Gingell <gingell@gnat.com>
 
 	* MAINTAINERS (Write After Approval): Add myself.
