--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-27  Tom Tromey  <tromey@redhat.com>
+
+	* expr.c (expand_invoke): Don't generate null pointer check if
+	we're calling <init>.
+
 2002-03-27  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* expr.c (java_lang_expand_expr): Rename java_expand_expr,
