* configure.in (gcc_cv_as): Use $target_alias in directory searchs 	rather than $target.  Heed program_prefix and 	program_transform_name.  Search for gas in cross-compiler case too. 	"test -x" rather than "test -f". 	(gcc_cv_ld): Likewise. 	(gcc_cv_nm): Heed program_prefix and program_transform_name. 	(gcc_cv_objdump): Likewise. 	* configure: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51489 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-03-28  Alan Modra  <amodra@bigpond.net.au>
+
+	* configure.in (gcc_cv_as): Use $target_alias in directory searchs
+	rather than $target.  Heed program_prefix and
+	program_transform_name.  Search for gas in cross-compiler case too.
+	"test -x" rather than "test -f".
+	(gcc_cv_ld): Likewise.
+	(gcc_cv_nm): Heed program_prefix and program_transform_name.
+	(gcc_cv_objdump): Likewise.
+	* configure: Regenerate.
+
 2002-03-27  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* Makefile.in (attribs.o): Update.
