--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-27  Richard Henderson  <rth@redhat.com>
+
+	* g++.dg/ext/instantiate1.C: Use scan-assembler, not link errors.
+	* g++.dg/ext/instantiate2.C, g++.dg/ext/instantiate3.C: Likewise;
+	move from g++.old-deja/g++.ext/.
+
 2002-03-27  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/init/new2.C: New test.
