--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,22 @@
+2002-03-27  Jeff Sturm  <jsturm@one-point.com>
+
+	* java/net/PlainDatagramSocketImpl.java
+	(close): Use native implementation.
+	(finalize): New method.
+
+	* java/net/PlainSocketImpl.java (finalize): New method.
+
+	* java/net/natPlainDatagramSocketImpl.cc
+	(java/io/FileDescriptor.h): Don't include.
+	(close): Implement method here.
+	(create): Don't assign fd.
+
+	* java/net/natPlainSocketImpl.cc
+	(java/io/FileDescriptor.h): Don't include.
+	(create): Don't assign fd.
+	(accept): Likewise.
+	(close): Synchronize.
+
 2002-03-25  Andrew Haley <aph@cambridge.redhat.com>, Hans Boehm <Hans_Boehm@hp.com>
 
 	* include/dwarf2-signal.h (MAKE_THROW_FRAME): Add for IA-64.
