--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,12 @@
+2002-03-28  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	Fix for PR java/5993:
+	* parse.y (resolve_package): Return the decl if resolution was
+	successful. Don't special case "java.lang" and "java.lang.reflect" 
+	packages. Set type_name to the merged identifier.
+	(resolved_qualified_expression_name): Print error using "name" if
+	resolve_package returns NULL_TREE.
+
 2002-03-27  Tom Tromey  <tromey@redhat.com>
 
 	* expr.c (expand_invoke): Don't generate null pointer check if
