* misc.c (gnat_expand_expr): Move prototype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51503 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-28  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* misc.c (gnat_expand_expr): Move prototype.
+
 2002-03-27  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* misc.c (insert_default_attributes): Remove.
