--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-28  Andreas Jaeger  <aj@suse.de>
+
+	* Makefile.in (stamp-sdefault): Fix path for Makefile.
+
 2002-03-28  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* misc.c (gnat_expand_expr): Move prototype.
