--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-28   Geert Bosch <bosch@gnat.com>
+
+	* prj-pp.adb : New file.
+
+	* prj-pp.ads : New file.
+
 2002-03-28  Andreas Jaeger  <aj@suse.de>
 
 	* Makefile.in (stamp-sdefault): Fix path for Makefile.
