--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-28  Andrew Haley  <aph@redhat.com>
+
+	* libjava.lang/Throw_2.java: New.
+	* libjava.lang/Throw_2.out: New.
+
 2002-03-27  Anthony Green  <green@redhat.com>
 
 	* libjava.lang/InvokeReturn.java: Modify test for targets
