* doc/invoke.texi (Warning Options): Refer to C++ Dialect Options 	and Objective-C Dialect Options.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51524 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-28  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/invoke.texi (Warning Options): Refer to C++ Dialect Options
+	and Objective-C Dialect Options.
+
 2002-03-28  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (alpha_emit_conditional_branch): TFmode NE
