--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-28  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.dg/weak-1.c: Fix typo in scan-assembler pattern.
+
+	* g++.old-deja/g++.law/bit-fields2.C: Skip on mmix-knuth-mmixware.
+
 2002-03-27  Richard Henderson  <rth@redhat.com>
 
 	* g++.dg/ext/instantiate1.C: Use scan-assembler, not link errors.
