--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 28 16:35:31 2002  Jeffrey A Law  (law@redhat.com)
+
+	* combine.c (simplify_and_const_int): Make sure to apply mask
+	when force_to_mode returns a constant integer.  PR3311.
+
 2002-03-28  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa-linux.h (LOCAL_LABEL_PREFIX): Define.
