--- a/gcc-3_1-branch/libffi/ChangeLog
+++ b/gcc-3_1-branch/libffi/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-29  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	PR other/2620
+	* src/mips/n32.s: Delete
+	* src/mips/o32.s: Delete
+
 2002-03-17  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* Makefile.am: libfficonvenience -> libffi_convenience.
