--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-29  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	PR other/2620
+	* src/mips/n32.s: Delete
+	* src/mips/o32.s: Delete
+
 2002-03-21  Loren J. Rittle  <ljrittle@acm.org>
 
 	* configure.in: Enable alpha*-*-freebsd*.
