* except.c (expand_end_java_handler): If the handler type is NULL, 	use java.lang.Throwable.  Fixes PR java/5986.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51538 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-28  Tom Tromey  <tromey@redhat.com>
+
+	* except.c (expand_end_java_handler): If the handler type is NULL,
+	use java.lang.Throwable.  Fixes PR java/5986.
+
 2002-03-28  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	Fix for PR java/4715:
