* config/i386/freebsd.h (LINK_SPEC): Don't pass default 	emulation to the linker. 	* config/alpha/freebsd.h (LINK_SPEC): Likewise. 	* config/sparc/freebsd.h (LINK_SPEC): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51540 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-03-28  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/i386/freebsd.h (LINK_SPEC): Don't pass default
+	emulation to the linker.
+
+2002-03-28  Loren J. Rittle  <ljrittle@acm.org>
+
+	* config/alpha/freebsd.h (LINK_SPEC): Likewise.
+	* config/sparc/freebsd.h (LINK_SPEC): Likewise.
+
 Thu Mar 28 16:35:31 2002  Jeffrey A Law  (law@redhat.com)
 
 	* combine.c (simplify_and_const_int): Make sure to apply mask
