PR target/5715         * config/alpha/osf.h (ASM_SPEC): Don't pass any special options         to GAS.  Correct drift between alternatives.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51546 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-03-28  Richard Henderson  <rth@redhat.com>
 
+	PR target/5715
+	* config/alpha/osf.h (ASM_SPEC): Don't pass any special options
+	to GAS.  Correct drift between alternatives.
+
+2002-03-28  Richard Henderson  <rth@redhat.com>
+
 	PR target/6087
 	* reload1.c (fixup_abnormal_edges): Move insn to edge via sequence.
 
