PR c++/6073 	* class.c (finish_struct_1): Update static field's DECL_MODE even 	if its type is a variant of t.
	* g++.dg/opt/static1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51549 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/static1.C: New test.
+
 2002-03-28  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.dg/weak-1.c: Fix typo in scan-assembler pattern.
