--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* g++.dg/opt/static1.C: New test.
 
+	* g++.dg/opt/longbranch1.C: New test.
+
 2002-03-27  Richard Henderson  <rth@redhat.com>
 
 	* g++.dg/ext/instantiate1.C: Use scan-assembler, not link errors.
