--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-29  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cp-lang.c (LANG_HOOKS_MAKE_TYPE): Redefine.
+	* cp-tree.h (cp_make_lang_type): Rename.
+	* lex.c (cp_make_lang_type): Rename.
+	(make_aggr_type): Update.
+	* tree.c (init_tree): Don't set make_lang_type_fn.
+
 2002-03-29  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/6073
