* Makefile.in: Pass VPATH=$(fsrcdir) when calling make in rts 	directory.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51559 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-29  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in: Pass VPATH=$(fsrcdir) when calling make in rts
+	directory.
+
 2001-03-28  Robert Dewar <dewar@gnat.com>
 
 	* checks.ads:
