--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-29  Tom Tromey  <tromey@redhat.com>
+
+	* java/net/natPlainDatagramSocketImpl.cc (close): New function.
+	* java/net/natPlainSocketImpl.cc (close): Indentation fix.
+
 2002-03-27  Jeff Sturm  <jsturm@one-point.com>
 
 	* java/net/PlainDatagramSocketImpl.java
