--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-29  Steve Ellcey  <sje@cup.hp.com>
+
+	* config/ia64/ia64.md (*ptr_extend_plus_1, *ptr_extend_plus_2): New.
+	* config/ia64/ia64.c (basereg_operand): New.
+	* config/ia64/ia64-protos.h (basereg_operand): Declare.
+	* config/ia64/ia64.h (PREDICATE_CODES): Add basereg_operand.
+
 2002-03-29  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.c (mmix_target_asm_function_prologue): Correct
