2002-03-29  Martin Kahlert  <martin.kahlert@infineon.com>
	* lex.c (java_new_lexer): Alias "646" to DEFAULT_ENCODING.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51565 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-29  Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* lex.c (java_new_lexer): Alias "646" to DEFAULT_ENCODING.
+
 2002-03-28  Tom Tromey  <tromey@redhat.com>
 
 	* except.c (expand_end_java_handler): If the handler type is NULL,
